# sefirot

./: Cargo.toml  LICENSE
bevy_luisa/: Cargo.toml
bevy_luisa/examples/: screen.rs
bevy_luisa/src/: display.rs  kernel.rs  lib.rs
bevy_luisa_macro/: Cargo.toml
bevy_luisa_macro/src/: lib.rs
bevy_sefirot/: Cargo.toml
bevy_sefirot/examples/: test.rs
bevy_sefirot/src/: display.rs  lib.rs  luisa.rs
bevy_sefirot_macro/: Cargo.toml
bevy_sefirot_macro/src/: lib.rs
cuda_device_sys/: Cargo.toml  build.rs  wrapper.h
cuda_device_sys/src/: lib.rs
id_newtype/: Cargo.toml
id_newtype/src/: lib.rs
keter/: Cargo.toml
keter/src/: bindless.rs  graph.rs  lib.rs  pixel_storage.rs  utils.rs
keter/src/graph/: copy.rs  profile.rs
keter_macro/: Cargo.toml
keter_macro/src/: lib.rs
sefirot/: Cargo.toml
sefirot/examples/: particles.rs  partition.rs  swapchain.rs  timing.rs
sefirot/src/: accessor.rs  domain.rs  element.rs  emanation.rs  extension.rs  field.rs  graph.rs  kernel.rs  lib.rs  mapping.rs  ops.rs  tests.rs  utils.rs
sefirot/src/accessor/: array.rs  constant.rs
sefirot/src/accessor/array/: structure.rs
sefirot/src/domain/: dynamic.rs  kernel.rs
sefirot/src/field/: access.rs  array.rs  constant.rs  map.rs  partition.rs  set.rs  slice.rs
sefirot/src/field/array/: index.rs  structure.rs
sefirot/src/graph/: tag.rs
sefirot/src/mapping/: bindless.rs  buffer.rs  cache.rs  constant.rs  function.rs  index.rs  swap.rs
sefirot/src/mapping/buffer/: dynamic.rs  storage.rs
sefirot/src/utils/: tag.rs
sefirot_grid/: Cargo.toml
sefirot_grid/src/: dual.rs  encoder.rs  lib.rs  margolus.rs  offset.rs  patterns.rs  tiled.rs
sefirot_macro/: Cargo.toml
sefirot_macro/src/: lib.rs
sefirot_proto/: Cargo.toml
sefirot_proto/src/: lib.rs
testbed/: Cargo.toml
testbed/examples/: ball.rs  gradient.rs
testbed/src/: agx.rs  color.rs  lib.rs  utils.rs
yesod/: Cargo.toml
yesod/examples/: global_print.rs  print.rs
yesod/src/: agx.rs  camera.rs  color.rs  direction.rs  dither.rs  drawing.rs  lib.rs  printer.rs  rand.rs  shapes.rs  utils.rs
yesod/src/printer/: global.rs
