[package]
name = "bevy_luisa"
version = "0.1.0"
edition = "2021"

[dependencies]
inventory = "0.3.12"
bevy_luisa_macro = { path = "../bevy_luisa_macro" }
once_cell = "1.18.0"
[dependencies.bevy]
version = "0.11.2"
default-features = false

[features]
display = ["bevy/bevy_winit"]

[dependencies.luisa_compute]
git = "https://github.com/iMplode-nZ/luisa-compute-rs"
branch = "main"

[[example]]
name = "screen"
required-features = ["display"]
