[package]
name = "bevy_sefirot"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_sefirot_macro = { path = "../bevy_sefirot_macro" }
sefirot = { path = "../sefirot", features = ["bevy"] }
once_cell = "1.18.0"
bevy = { version = "0.13.0", default-features = false }
static_assertions = "1.1.0"
pretty-type-name = "1.0.1"

[features]
display = ["bevy/bevy_winit"]
debug = ["sefirot/debug"]
