[package]
name = "sefirot"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.3"
generational-arena = "0.2.9"
parking_lot = "0.12.1"
petgraph = "0.6.4"
pretty-type-name = "1.0.1"
sefirot_macro = { path = "../sefirot_macro" }
smallvec = "1.11.1"
static_assertions = "1.1.0"
take_mut = "0.2.2"
tracing = { version = "0.1.40", optional = true }

[dependencies.luisa_compute]
git = "https://github.com/iMplode-nZ/luisa-compute-rs"
branch = "main"

[dependencies.tokio]
version = "1.32.0"
optional = true
features = ["sync"]

[dev-dependencies]
rand = "0.8.5"
winit = "0.28.7"

[dependencies.bevy_ecs]
version = "0.11.3"
default-features = false
optional = true

[features]
bevy = ["dep:bevy_ecs", "sefirot_macro/bevy"]
copy-from = ["dep:tokio"]
partition = ["copy-from"]
check-recursive-access = []
debug = ["dep:tracing"]
