[package]
name = "sefirot"
version = "0.1.0"
edition = "2021"

[dependencies]
generational-arena = "0.2.9"
parking_lot = { version = "0.12.1", features = ["send_guard", "arc_lock"] }
petgraph = "0.6.4"
pretty-type-name = "1.0.1"
smallvec = "1.11.1"
static_assertions = "1.1.0"
take_mut = "0.2.2"
tracing = { version = "0.1.40", optional = true }
id_newtype = { path = "../id_newtype" }
once_cell = "1.19.0"
dashmap = "5.5.3"
dyn-clone = "1.0.17"
sefirot_macro = { path = "../sefirot_macro" }

[dependencies.luisa_compute]
git = "https://github.com/iMplode-nZ/luisa-compute-rs"
branch = "older-submod"

[dev-dependencies]
rand = "0.8.5"
winit = "0.29.14"

[dependencies.bevy_ecs]
version = "0.13.0"
default-features = false
optional = true

[features]
bevy = ["dep:bevy_ecs"]
debug = ["dep:tracing"]
