[package]
name = "sefirot"
version = "0.1.0"
edition = "2021"

[dependencies]
generational-arena = "0.2.9"
parking_lot = { version = "0.12.1", features = ["send_guard", "arc_lock"] }
petgraph = "0.6.4"
pretty-type-name = "1.0.1"
smallvec = "1.11.1"
static_assertions = "1.1.0"
take_mut = "0.2.2"
tracing = { version = "0.1.40", optional = true }
id_newtype = { path = "../id_newtype" }
once_cell = "1.19.0"
dashmap = "6.0.1"
dyn-clone = "1.0.17"
sefirot_macro = { path = "../sefirot_macro" }
cuda_device_sys = { path = "../cuda_device_sys", optional = true }

[dependencies.luisa_compute]
git = "https://github.com/entropylost/luisa-compute-rs"
branch = "main"
default-features = false

[dev-dependencies]
rand = "0.8.5"
winit = "0.30.5"

[dependencies.bevy_ecs]
version = "0.14.1"
default-features = false
optional = true

[features]
default = ["remote", "cuda", "cpu", "metal", "dx"]
bevy = ["dep:bevy_ecs"]
debug = ["dep:tracing"]
trace = ["dep:tracing", "dep:cuda_device_sys"]
glam = ["luisa_compute/glam"]
nalgebra = ["luisa_compute/nalgebra"]
metal = ["luisa_compute/metal"]
cuda = ["luisa_compute/cuda"]
dx = ["luisa_compute/dx"]
strict = ["luisa_compute/strict"]
remote = ["luisa_compute/remote"]
cpu = ["luisa_compute/cpu"]
oidn = ["luisa_compute/oidn"]
