[package]
name = "sefirot_testbed"
version = "0.1.0"
edition = "2021"

[dependencies]
sefirot = { path = "../sefirot" }
winit = "0.29.15"
ndarray = { version = "0.16.1", optional = true }
video-rs = { version = "0.9.0", features = ["ndarray"], optional = true }

[features]
video = ["dep:video-rs", "dep:ndarray"]
