[package]
name = "keter_testbed"
version = "0.1.0"
edition = "2021"

[dependencies]
keter = { path = "../keter" }
winit = "0.30.9"
ndarray = { version = "0.16.1", optional = true }
video-rs = { version = "0.9.0", features = ["ndarray"], optional = true }
take_mut = "0.2.2"

[features]
video = ["dep:video-rs", "dep:ndarray"]
